# modern-robotics-cpp

./: .gitignore  CMakeLists.txt  Doxyfile.in  README.md  README_8md.html  all_8hpp.html  all_8hpp__incl.map  all_8hpp__incl.md5  all_8hpp_source.html  dir_000002_000000.html  dir_2142f536f16bd6d19a72fb7054da9c79.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.html  dynamics__of__open__chains_8cpp.html  dynamics__of__open__chains_8cpp__incl.map  dynamics__of__open__chains_8cpp__incl.md5  dynamics__of__open__chains_8hpp.html  dynamics__of__open__chains_8hpp__dep__incl.map  dynamics__of__open__chains_8hpp__dep__incl.md5  dynamics__of__open__chains_8hpp__incl.map  dynamics__of__open__chains_8hpp__incl.md5  dynamics__of__open__chains_8hpp_source.html  files.html  forward__kinematics_8cpp.html  forward__kinematics_8cpp__incl.map  forward__kinematics_8cpp__incl.md5  forward__kinematics_8hpp.html  forward__kinematics_8hpp__dep__incl.map  forward__kinematics_8hpp__dep__incl.md5  forward__kinematics_8hpp__incl.map  forward__kinematics_8hpp__incl.md5  forward__kinematics_8hpp_source.html  graph_legend.html  group__dynamics__open__open__chains.html  group__forward__kinematics.html  group__inverse__kinematics.html  group__rigid__body__motions.html  group__robot__control.html  (+65 more)
.github/workflows/: cmake-single-platform.yml  modern-robotics.yml  ubuntu20.yml  ubuntu22.yml  ubuntu24.yml
include/modern_robotics/: all.hpp  dynamics_of_open_chains.hpp  forward_kinematics.hpp  inverse_kinematics.hpp  modern_robotics.hpp  rigid_body_motions.hpp  robot_control.hpp  trajectory_generation.hpp  utils.hpp  velocity_kinematics_and_statics.hpp
search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_7.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  (+8 more)
src/: dynamics_of_open_chains.cpp  forward_kinematics.cpp  inverse_kinematics.cpp  rigid_body_motions.cpp  robot_control.cpp  trajectory_generation.cpp  utils.cpp  velocity_kinematics_and_statics.cpp
tests/: test_dynamics_of_open_chains.cpp  test_forward_kinemaitcs.cpp  test_inverse_kinematics.cpp  test_rigid_body_motions.cpp  test_robot_control.cpp  test_trajectory_generation.cpp  test_utils.cpp  test_velocity_kinematics_and_statics.cpp
